--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,8 @@
-podman (5.4.1+ds1-2) unstable; urgency=medium
+podman (5.4.2+composetest-1) unstable; urgency=medium
 
-  * disable the cni backend
-  * Fix possible deadlock in podman cp, Closes: #1101414
-  * Stop shipping obsolete libpod.conf
+  * Test build
 
- -- Reinhard Tartler <siretart@tauware.de>  Thu, 27 Mar 2025 10:06:13 -0400
+  -- Name Noname <name@example.com>  Wed, 1 Jan 2025 00:00:00 +0000
 
 podman (5.4.1+ds1-1) unstable; urgency=medium
 
