--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libpod (5.0.3+ds1-1) oracular; urgency=medium
+
+  * Test build
+
+ -- Monika  Kairaitytė <monika@kibit.lt>  Wed, 1 Jan 2025 00:00:00 +0000
+
 libpod (5.0.3+ds1-5ubuntu1) oracular; urgency=medium
 
   * Set XDG_CONFIG_HOME to builddir to fix FTBFS with golang-1.23
