--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
 libpod (4.9.5+ds1-1) unstable; urgency=medium
 
+  * Test build
+
+  -- Monika Kairaitytė <monika@kibit.lt>  Wed, 1 Jan 2025 00:00:00 +0000
+
+libpod (4.9.5+ds1-1) unstable; urgency=medium
+
   * New upstream version
     - compiled against newer containers/image to address CVE-2024-3727,
       and also enables image signing and verification with sigstore
